<resources>
    <string name="app_name">Memories</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="take_picture">Launch Camera</string>
    <string name="submit">Create Post</string>
    <string name="saving">Uploading…</string>

    <string name="a_picture_should_be_worth_a_thousand_words_and_some_more_so_never_forget_a_caption">A picture should be worth a thousand words and some more, write a caption…</string>
    <string name="taken_picture">taken picture</string>
    <string name="log_out">Log out</string>
    <string name="sign">Sign up</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="post_image">Post Image</string>
    <string name="time">Timestamp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>