<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llNameAndPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPostProfilePic"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:contentDescription="@string/profile"
                android:scaleType="fitCenter"
                tools:srcCompat="@drawable/user" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/time" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:contentDescription="@string/post_image"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/flowersandmountains" />

    <TextView
        android:id="@+id/tvPostDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:minLines="1"
        android:singleLine="false"
        android:text="@string/a_picture_should_be_worth_a_thousand_words_and_some_more_so_never_forget_a_caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp" />

    <!--TODO clicking on post shows complete description
        android:ellipsize="end"
        android:maxLines="3"
-->
</LinearLayout>