<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <ImageButton
        android:id="@+id/btnLogout"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="end"
        android:contentDescription="@string/log_out"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@android:drawable/ic_lock_power_off" />

    <LinearLayout
        android:id="@+id/llprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/ivProfilePgPic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile"
            android:cropToPadding="true"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/tvUsernameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/primary_text_light"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>
<!--
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />
-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUserPosts"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>